--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      #myChart {
+        width: 80%;
+        height: 50vh;
+        margin: 5rem auto;
+      }
+    </style>
   </head>
   <body>
     <canvas id="myChart" width="400" height="400"></canvas>
